Added New Editor Code
Added the `codeedit\halideeditor` package for the new GUI project.